sdk/storagecache/arm-storagecache/samples/v7/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| ------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [amlFilesystemsArchiveSample.ts][amlfilesystemsarchivesample]                         | Archive data from the AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Archive.json                                                                                                                                                                                                                                                                                                            |
| [amlFilesystemsCancelArchiveSample.ts][amlfilesystemscancelarchivesample]             | Cancel archiving data from the AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_CancelArchive.json                                                                                                                                                                                                                                                                                             |
| [amlFilesystemsCreateOrUpdateSample.ts][amlfilesystemscreateorupdatesample]           | Create or update an AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [amlFilesystemsDeleteSample.ts][amlfilesystemsdeletesample]                           | Schedules an AML file system for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Delete.json                                                                                                                                                                                                                                                                                                         |
| [amlFilesystemsGetSample.ts][amlfilesystemsgetsample]                                 | Returns an AML file system. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Get.json                                                                                                                                                                                                                                                                                                                           |
| [amlFilesystemsListByResourceGroupSample.ts][amlfilesystemslistbyresourcegroupsample] | Returns all AML file systems the user has access to under a resource group. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_ListByResourceGroup.json                                                                                                                                                                                                                                                           |
| [amlFilesystemsListSample.ts][amlfilesystemslistsample]                               | Returns all AML file systems the user has access to under a subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_List.json                                                                                                                                                                                                                                                                            |
| [amlFilesystemsUpdateSample.ts][amlfilesystemsupdatesample]                           | Update an AML file system instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/amlFilesystems_Update.json                                                                                                                                                                                                                                                                                                                |
| [ascOperationsGetSample.ts][ascoperationsgetsample]                                   | Gets the status of an asynchronous operation for the Azure HPC Cache x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/AscOperations_Get.json                                                                                                                                                                                                                                                                                   |
| [ascUsagesListSample.ts][ascusageslistsample]                                         | Gets the quantity used and quota limit for resources x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/AscResourceUsages_Get.json                                                                                                                                                                                                                                                                                               |
| [cachesCreateOrUpdateSample.ts][cachescreateorupdatesample]                           | Create or update a cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                          |
| [cachesDebugInfoSample.ts][cachesdebuginfosample]                                     | Tells a cache to write generate debug info for support to process. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_DebugInfo.json                                                                                                                                                                                                                                                                                      |
| [cachesDeleteSample.ts][cachesdeletesample]                                           | Schedules a cache for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Delete.json                                                                                                                                                                                                                                                                                                                            |
| [cachesFlushSample.ts][cachesflushsample]                                             | Tells a cache to write all dirty data to the Storage Target(s). During the flush, clients will see errors returned until the flush is complete. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Flush.json                                                                                                                                                                                                             |
| [cachesGetSample.ts][cachesgetsample]                                                 | Returns a cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [cachesListByResourceGroupSample.ts][cacheslistbyresourcegroupsample]                 | Returns all caches the user has access to under a resource group. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_ListByResourceGroup.json                                                                                                                                                                                                                                                                             |
| [cachesListSample.ts][cacheslistsample]                                               | Returns all caches the user has access to under a subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_List.json                                                                                                                                                                                                                                                                                              |
| [cachesPausePrimingJobSample.ts][cachespauseprimingjobsample]                         | Schedule a priming job to be paused. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/PausePrimingJob.json                                                                                                                                                                                                                                                                                                                     |
| [cachesResumePrimingJobSample.ts][cachesresumeprimingjobsample]                       | Resumes a paused priming job. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/ResumePrimingJob.json                                                                                                                                                                                                                                                                                                                           |
| [cachesSpaceAllocationSample.ts][cachesspaceallocationsample]                         | Update cache space allocation. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/SpaceAllocation_Post.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStartPrimingJobSample.ts][cachesstartprimingjobsample]                         | Create a priming job. This operation is only allowed when the cache is healthy. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StartPrimingJob.json                                                                                                                                                                                                                                                                          |
| [cachesStartSample.ts][cachesstartsample]                                             | Tells a Stopped state cache to transition to Active state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Start.json                                                                                                                                                                                                                                                                                                  |
| [cachesStopPrimingJobSample.ts][cachesstopprimingjobsample]                           | Schedule a priming job for deletion. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StopPrimingJob.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStopSample.ts][cachesstopsample]                                               | Tells an Active cache to transition to Stopped state. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Stop.json                                                                                                                                                                                                                                                                                                        |
| [cachesUpdateSample.ts][cachesupdatesample]                                           | Update a cache instance. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_Update.json                                                                                                                                                                                                                                                                                                                                   |
| [cachesUpgradeFirmwareSample.ts][cachesupgradefirmwaresample]                         | Upgrade a cache's firmware if a new version is available. Otherwise, this operation has no effect. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Caches_UpgradeFirmware.json                                                                                                                                                                                                                                                |
| [checkAmlFsSubnetsSample.ts][checkamlfssubnetssample]                                 | Check that subnets will be valid for AML file system create calls. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/checkAmlFSSubnets.json                                                                                                                                                                                                                                                                                     |
| [getRequiredAmlFsSubnetsSizeSample.ts][getrequiredamlfssubnetssizesample]             | Get the number of available IP addresses needed for the AML file system information provided. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/getRequiredAmlFSSubnetsSize.json                                                                                                                                                                                                                                                |
| [operationsListSample.ts][operationslistsample]                                       | Lists all of the available Resource Provider operations. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Operations_List.json                                                                                                                                                                                                                                                                                                 |
| [skusListSample.ts][skuslistsample]                                                   | Get the list of StorageCache.Cache SKUs available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/Skus_List.json                                                                                                                                                                                                                                                                                        |
| [storageTargetFlushSample.ts][storagetargetflushsample]                               | Tells the cache to write all dirty data to the Storage Target's backend storage. Client requests to this storage target's namespace will return errors until the flush operation completes. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Flush.json                                                                                                                                                         |
| [storageTargetInvalidateSample.ts][storagetargetinvalidatesample]                     | Invalidate all cached data for a storage target. Cached files are discarded and fetched from the back end on the next request. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Invalidate.json                                                                                                                                                                                                                 |
| [storageTargetResumeSample.ts][storagetargetresumesample]                             | Resumes client access to a previously suspended storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Resume.json                                                                                                                                                                                                                                                                                    |
| [storageTargetSuspendSample.ts][storagetargetsuspendsample]                           | Suspends client access to a storage target. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Suspend.json                                                                                                                                                                                                                                                                                                       |
| [storageTargetsCreateOrUpdateSample.ts][storagetargetscreateorupdatesample]           | Create or update a Storage Target. This operation is allowed at any time, but if the cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the cache is healthy again. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_CreateOrUpdate.json                                                                                                                   |
| [storageTargetsDeleteSample.ts][storagetargetsdeletesample]                           | Removes a Storage Target from a cache. This operation is allowed at any time, but if the cache is down or unhealthy, the actual removal of the Storage Target may be delayed until the cache is healthy again. Note that if the cache has data to flush to the Storage Target, the data will be flushed before the Storage Target will be deleted. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Delete.json |
| [storageTargetsDnsRefreshSample.ts][storagetargetsdnsrefreshsample]                   | Tells a storage target to refresh its DNS information. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_DnsRefresh.json                                                                                                                                                                                                                                                                                         |
| [storageTargetsGetSample.ts][storagetargetsgetsample]                                 | Returns a Storage Target from a cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_Get.json                                                                                                                                                                                                                                                                                                                |
| [storageTargetsListByCacheSample.ts][storagetargetslistbycachesample]                 | Returns a list of Storage Targets for the specified cache. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_ListByCache.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsRestoreDefaultsSample.ts][storagetargetsrestoredefaultssample]         | Tells a storage target to restore its settings to their default values. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/StorageTargets_RestoreDefaults.json                                                                                                                                                                                                                                                                   |
| [usageModelsListSample.ts][usagemodelslistsample]                                     | Get the list of cache usage models available to this subscription. x-ms-original-file: specification/storagecache/resource-manager/Microsoft.StorageCache/stable/2023-05-01/examples/UsageModels_List.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/amlFilesystemsArchiveSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env STORAGECACHE_SUBSCRIPTION_ID="<storagecache subscription id>" STORAGECACHE_RESOURCE_GROUP="<storagecache resource group>" node dist/amlFilesystemsArchiveSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[amlfilesystemsarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsArchiveSample.ts
[amlfilesystemscancelarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsCancelArchiveSample.ts
[amlfilesystemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsCreateOrUpdateSample.ts
[amlfilesystemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsDeleteSample.ts
[amlfilesystemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsGetSample.ts
[amlfilesystemslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsListByResourceGroupSample.ts
[amlfilesystemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsListSample.ts
[amlfilesystemsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/amlFilesystemsUpdateSample.ts
[ascoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/ascOperationsGetSample.ts
[ascusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/ascUsagesListSample.ts
[cachescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesCreateOrUpdateSample.ts
[cachesdebuginfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesDebugInfoSample.ts
[cachesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesDeleteSample.ts
[cachesflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesFlushSample.ts
[cachesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesGetSample.ts
[cacheslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesListByResourceGroupSample.ts
[cacheslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesListSample.ts
[cachespauseprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesPausePrimingJobSample.ts
[cachesresumeprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesResumePrimingJobSample.ts
[cachesspaceallocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesSpaceAllocationSample.ts
[cachesstartprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesStartPrimingJobSample.ts
[cachesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesStartSample.ts
[cachesstopprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesStopPrimingJobSample.ts
[cachesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesStopSample.ts
[cachesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesUpdateSample.ts
[cachesupgradefirmwaresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/cachesUpgradeFirmwareSample.ts
[checkamlfssubnetssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/checkAmlFsSubnetsSample.ts
[getrequiredamlfssubnetssizesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/getRequiredAmlFsSubnetsSizeSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/operationsListSample.ts
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/skusListSample.ts
[storagetargetflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetFlushSample.ts
[storagetargetinvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetInvalidateSample.ts
[storagetargetresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetResumeSample.ts
[storagetargetsuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetSuspendSample.ts
[storagetargetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetsCreateOrUpdateSample.ts
[storagetargetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetsDeleteSample.ts
[storagetargetsdnsrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetsDnsRefreshSample.ts
[storagetargetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetsGetSample.ts
[storagetargetslistbycachesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetsListByCacheSample.ts
[storagetargetsrestoredefaultssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/storageTargetsRestoreDefaultsSample.ts
[usagemodelslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v7/typescript/src/usageModelsListSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-storagecache?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagecache/arm-storagecache/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
